update add register

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -190,7 +190,7 @@
                 <div class="form-group">
                     <label class="col-md-4 control-label" for="btnGetSecret"></label>
                     <div class="col-md-4">
-                        <button id="btnGetSecret" (click)="get" name="btnGetSecret" class="btn btn-info">get secret</button>
+                        <button id="btnGetSecret" (click)="getSecret()" name="btnGetSecret" class="btn btn-info">get secret</button>
                     </div>
                 </div>
 
